Overflow fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -266,6 +266,7 @@ scrollbar-color: rgba(255, 255, 255, 0.1) rgb(0, 0, 0);
     min-height: 300px;
     box-shadow: inset 0 0 30px #306FDB;
     position: relative;
+    overflow: hidden;
 }
 
 .grid-item-1 div {
